Static pages basis done..

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,6 @@
-<h1>Pages#about</h1>
-<p>Find me in app/views/pages/about.html.erb</p>
+<h1>About</h1>
+<p>
+  Papernote is a personal excersice to finally start implementing my ideas on real webpages.
+  <p>
+  I chose Ruby on Rails, as my converyor. I leant it from stratch, and for that I used the amazignly good tutorial by Michael Hartl on http://railstutorial.org/
+</p>
