--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,6 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<h1>Hola</h1>
+<p>
+  Papernote helps you post, share and track your New Year´s resolution.
+  </br>
+  Join us!
+</p>
