trying facebook login, finish layout draft and routes

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,4 +3,5 @@
   Papernote helps you post, share and track your New Year´s resolution.
   </br>
   Join us!
+  <%= link_to "Sign up now!", '#', :class => "signup_button round" %>
 </p>
