--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,10 +1,22 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Papernote | <%= @title %></title>
+    <title><%= title %></title>
     <%= csrf_meta_tag %>
+    <%= render 'layouts/stylesheets' %>
+	<%= javascript_include_tag :defaults %>
   </head>
   <body>
-    <%= yield %>
+    <div class="container">
+      <%= render 'layouts/header' %>
+      <section class="round">
+	    <% flash.each do |key, value| %>
+		<%= content_tag(:div, value, :class => "flash #{key}") %> 
+		<% end %>
+        <%= yield %>
+      </section>
+	  <%= debug(params) if Rails.env.development? %>
+      <%= render 'layouts/footer' %>
+    </div>
   </body>
 </html>
