--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,7 @@
         <%= yield %>
       </section>
 	  <%= debug(params) if Rails.env.development? %>
+	  <%= debug(session) if Rails.env.development? %>
       <%= render 'layouts/footer' %>
     </div>
   </body>
